Users API is completed. Fixed POM to use Lombok.
