# src/main/java/es/proyecto/app/controller/UsersController.java
@@ -1,6 +1,7 @@
 package es.proyecto.app.controller;
 
 
+import es.proyecto.app.entity.UsersEntity;
 import es.proyecto.app.error.UsersException;
 import es.proyecto.app.service.UsersService;
 import es.swagger.codegen.api.UsersApi;
@@ -24,6 +25,73 @@ public class UsersController implements UsersApi {
     private UsersService usersService;
 
 
+    @Override
+    public ResponseEntity<UserCreatedResponse> createUser(User body) {
+        if (body == null) {
+            log.error("Null body provided");
+            throw new UsersException("Null body provided");
+        }
+
+        if (body.getUserName() == null || body.getUserName().isEmpty()) {
+            log.error("Invalid employee name");
+            throw  UsersException.MISSING_USER_NAME_EXCEPTION;
+        }
+
+        usersService.createUser(body);
+
+        log.info("Employee created successfully: {}", body.getIdUser());
+
+        return new ResponseEntity<>(HttpStatus.CREATED);
+    }
+
+
+    @Override
+    public ResponseEntity<DeleteResponse> deleteUser(Integer idUser) {
+        if (!isValidId(String.valueOf(idUser))) {
+            log.error("Invalid user ID format: {}", idUser);
+            throw UsersException.INVALID_USER_ID_EXCEPTION;
+        }
+
+        User deletedUser = usersService.getUserById(idUser);
+
+        if (deletedUser == null) {
+            log.error("Employee with id {} not found", idUser);
+            throw UsersException.NO_USER_FOUND_EXCEPTION;
+        }
+
+        try {
+            usersService.deleteUser(idUser);
+            log.info("Employee with id {} deleted successfully", idUser);
+            return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+        } catch (Exception e) {
+            log.error("Error deleting employee with id {}: {}", idUser, e.getMessage());
+            throw new UsersException("Error deleting employee with id " + idUser);
+        }
+    }
+
+    @Override
+    public ResponseEntity<User> getUserById(Integer idUser) {
+        try {
+            if (!isValidId(String.valueOf(idUser))) {
+                log.error("Invalid employee ID format: {}", idUser);
+                return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+            }
+
+            User empleado = usersService.getUserById(idUser);
+
+            if (empleado == null) {
+                log.info("Employee with id {} not found", idUser);
+                return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+            } else {
+                log.info("Employee with id {} retrieved successfully", idUser);
+                return new ResponseEntity<>(empleado, HttpStatus.OK);
+            }
+        } catch (Exception e) {
+            log.error("Error retrieving employee with id {}: {}", idUser, e.getMessage());
+            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
+
 
     @Override
     public ResponseEntity<UserResponse> getUsers() {
@@ -44,5 +112,45 @@ public class UsersController implements UsersApi {
         }
     }
 
+
+    @Override
+    public ResponseEntity<UpdateResponse> updateUser(Integer idUser, User body) {
+        try {
+            if (body == null) {
+                log.error("Null body provided");
+                throw UsersException.NULL_BODY_EXCEPTION;
+            }
+            if (body.getIdUser() == null) {
+                log.error("Employee ID is required for updating");
+                throw UsersException.MISSING_ID_EXCEPTION;
+            }
+
+            User existingEmployee = usersService.getUserById(idUser);
+            if (existingEmployee == null) {
+                log.error("No employee found with ID {}", idUser);
+                throw UsersException.NO_USER_FOUND_EXCEPTION;
+            }
+            HttpStatus status = usersService.updateUser(idUser, body);
+            log.info("Employee with id {} updated successfully", idUser);
+            return new ResponseEntity<>(status);
+
+        } catch (NumberFormatException e) {
+            log.error("Invalid ID format: {}", idUser);
+            throw UsersException.INVALID_USER_ID_EXCEPTION;
+        } catch (Exception e) {
+            log.error("Error updating employee with id {}: {}", idUser, e.getMessage());
+            throw new UsersException("Error updating employee");
+        }
+    }
+
+
+    private boolean isValidId(String id) {
+        try {
+            Integer.parseInt(id);
+            return true;
+        } catch (NumberFormatException e) {
+            return false;
+        }
+    }
 
 }
